[package]
name = "http_request_scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { workspace = true, features = [
    "server",       # needed for `hyper::server::conn`
    "http1",        # for http1::Builder
    "http2",        # for http2::Builder
] }

hyper-util = { workspace = true, features = [
    "tokio",        # needed for TokioIo, TokioExecutor
] }

tokio = { workspace = true, features = [
    "net",          # for TcpListener, TcpStream, etc.
    "macros",       # for #[tokio::main]
    "rt-multi-thread"  # for tokio::spawn, multi-threaded runtime
] }

http-body-util = { workspace = true }  # no extra features needed
