[package]
name = "http_request_scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { workspace = true, features = [
    "server",       
    "http1",     
    "http2",       
] }

hyper-util = { workspace = true, features = [
    "tokio",    
] }

tokio = { workspace = true, features = [
    "net",          
    "macros",      
    "rt-multi-thread"  
] }

http-body-util = { workspace = true }  
